# ProjectProposals

./: .gitignore  CMakeLists.txt  README.md
latex/: CMakeLists.txt
latex/CNCMachine/: .ignore  CMakeLists.txt  CNCmachine.tex
